src/components/Modeling/AdvancedView/AdvancedView.module.css
.advancedModelResult {
  margin-top: 40px;
    font-size: 1rem;
    min-width: 1600px;
  }
  .advancedModelResult .modelResult {
    display: inline-block;
    padding-bottom: 1.2em;
  }
  .advancedModelResult .modelResult .status {
    color: #f5a623;
    display: inline-block;
  }
  .advancedModelResult .modelComp {
    cursor: pointer;
    display: inline-block;
    margin-left: 30px;;
  }
  .advancedModelTable {
    font-size: 0.875rem;
    /* border: 0.5px solid #d8d8d8; */
    position: relative;
    max-height: 50vh;
    overflow-y: scroll;
    overflow-x: hidden;
  }
  .advancedModelTable::-webkit-scrollbar{
    width: 17px;
  }
  .advancedModelTable::-webkit-scrollbar-thumb {/*滚动条里面小方块*/
    border-radius: 5px;
  }
  .advancedModelTable::-webkit-scrollbar-track {/*滚动条里面轨道*/
    border-radius: 0;
  }
  .advancedModelTable :global(.ant-radio-wrapper) {
    vertical-align: middle;
  }
  .advancedModelTable .modelName {
    display: inline-block;
    width: 80%;
    font-size: 1em;
    overflow: hidden;
    text-overflow: ellipsis;
    vertical-align: middle;
  }
  .adrow {
    display: flex;
    cursor: pointer;
    /*justify-content: space-around;*/
    align-items: center;
    text-align: center;
  }

  .tableHeader {
    margin-right: 17px;
  }
.advancedModelTableDiv {
  /* width: 100%; */
  /* overflow-x: scroll; */
}
  .adrow .adcell {
    padding: 0.2em;
    border: 0.5px solid #d8d8d8;
    height: 3em;
    flex: 1 0 100px;
    padding: 0 0.5em;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    line-height: 3em;
  }
  .adrow .adcell:first-child {
    flex: 0 0 260px;
  }
  .button {
    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
    background-image: linear-gradient(to bottom, #5b657b, #243448);
    color: #fff;
    border: 0;
    border-radius: 5px;
    display: flex;
    justify-content: center;
    cursor: pointer;
    padding: 1em;
    margin-left: 0.5em;
    margin-bottom: 0.5em;
  }
  .buttonr{
      position: absolute;
      /*right: 50px;*/
      left: 600px;
      top: 30%;
  }
  .detailCurves {
    display: flex;
  }
  .detailCurves .rightPanel {
    flex: 2;
    position: relative;
  }
  .detailCurves .rightPanel .plot {
    display: flex;
    padding: 1em;
  }
  .detailCurves .rightPanel .plot img {
    width: 400px;
    height: 300px;
  }
  .detailCurves .leftPanel {
    min-width: 300px;
    padding: 0.5em 3em;
    /*background-color: #f0f0f0;*/
    min-height: 200px;
     border-right: 1px solid #979797;
  }
  .detailCurves .leftPanel .thumbnails {
    display: flex;
    flex-wrap: wrap;
  }
.detailCurves .leftPanel .thumbnails img{
  width: 52px;
}
.detailCurves .leftPanel .thumbnails .thumbnail {
    flex-basis: 50%;
    text-align: center;
  }
.thumbnail{
    display: flex;
    align-items: center;
    margin-top: 8px;
}
.thumbnail img{
  width: 52px;
  height: 52px;
  margin-right: 3px;
  flex:0 0 52px;
}
.thumbnail div{
  text-align: left;
}
  .detailCurves .leftPanel button {
    margin-right: 0.2em;
  }
  .detailCurves .leftPanel .predictTable {
    background-color: white;
    margin: 1em 0;
  }
  .detailCurves .leftPanel .predictTable th,
  .detailCurves .leftPanel .predictTable td {
    padding: 0 8px !important;
  }
  .detailCurves .leftPanel .predictTable :global(.ant-table-tbody) :global(.ant-table-row):first-child td:nth-of-type(1),
  .detailCurves .leftPanel .predictTable :global(.ant-table-tbody) :global(.ant-table-row):nth-of-type(2) td:nth-of-type(1) {
    background-color: #eaeff5;
  }
  .detailCurves .leftPanel .predictTable :global(.ant-table-thead) th {
    background-color: white;
  }
  .detailCurves .leftPanel .predictTable :global(.ant-table-thead) th:nth-of-type(2),
  .detailCurves .leftPanel .predictTable :global(.ant-table-thead) th:nth-of-type(3) {
    background-color: #edfddb;
  }
  .detailCurves .leftPanel .predictTable tr td {
    white-space: nowrap;
  }
  .residualDiagnose {
    padding-bottom: 0.5em;
  }
  .residualDiagnose .plot {
    display: inline-block;
    width: 30%;
  }
  .residualDiagnose .choosePlot {
    display: inline-block;
    width: 70%;
    vertical-align: top;
  }
  .residualDiagnose .choosePlot .radioWrapper {
    display: inline-block;
    margin: 0.1em;
  }
  .diagnoseResult {
    display: inline-block;
    width: 500px;
    vertical-align: top;
    margin-top: 1em;
  }
  .diagnoseResult .content {
    margin-top: 1em;
  }
  .diagnoseResult .content .items {
    /*margin-left: 2em;*/
    list-style-type: initial;
  }
  .diagnoseResult .content .action {
    margin-top: 2em;
    display: flex;
    align-items: center;
    justify-content: space-between;
  }
  .diagnoseResult .content .action span {
    display: inline-block;
    width: 250px;
    font-size: 8px;
  }
  .diagnoseResult .content .action button {
    width: 205px;
    float: right;
  }
  .diagnoseResult .header {
    font-weight: bold;
  }
.header +div{
  padding: 10px 0;
}
  .settings {
    display: flex;
    align-items: center;
  }
  .settings .label {
    font-size: 1rem;
    margin-right: 1rem;
  }
  .middle :global(.ant-select-arrow) {
    font-size: 1rem;
    line-height: 1;
  }
  .comparison {
    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
    background-image: linear-gradient(to bottom, #5b657b, #243448);
    color: #fff;
    border: 0;
    border-radius: 5px;
    display: flex;
    justify-content: center;
    cursor: pointer;
    padding: .8rem 2rem;
  }
  .comparison:hover {
    color: white;
  }
  .middle {
    display: flex;
    margin-bottom: 1rem;
  }
  .settingsSelect {
    min-width: 14rem;
  }
  .adrow :global(.anticon-up) {
    transition: transform .3s ease;
    margin-left: .2rem;
  }
  .metricSelection {
    display: flex;
    text-align: right;
    justify-content: flex-end;
    margin-bottom: 1rem;
  }
  .metricSelection .text {
    line-height: 38px;
    margin-right: 1rem;
  }
  .headerLabel {
    max-width: 60%;
    overflow: hidden;
    text-overflow: ellipsis;
    display: inline-block;
    vertical-align: bottom;
  }
.mccb{
  display: flex;
  justify-content: flex-end;
}
.mccb button{
  margin-left: 20px;
}
.metricSwitch {
  display: flex;
  flex: none;
  align-items: center;
  margin-right: 15px;
}
.metricSwitch span {
  margin: 0 10px;
}

